*Empty MediaWiki Message*

--- a/Madurai.mw
+++ b/Madurai.mw
@@ -1,10 +1,11 @@
+{{Copyedit|date=February 2008}}
 {{Infobox Indian Jurisdiction
 | native_name = Madurai
 | type = city
 | latd = 9.8
 | longd = 78.10
 | skyline=Madurai 01.jpg
-| skyline_caption= Ing karaniwan a akakit kareng dalan ning Madurai
+| skyline_caption= Typical streetlife in Madurai
 | state_name = Tamil Nadu
 | district = [[Madurai district]]
 | language = Tamil
@@ -23,177 +24,20 @@ accessmonthday=October 29 | accessyear=2006}}</ref>
 | vehicle_code_range = TN-58 and TN-59| website = madurai.nic.in
 }}
 
-'''Madurai''' {{audio|Madurai.ogg|pronunciation}}<!-- The following
-text is in Standard Unicode. If it renders incorrectly on your
-computer, you may need to upgrade your browser and/or OS. Check your OS
-configuration here before editing:
-http://en.wikipedia.org/wiki/WP:INDIC --> ({{lang-ta|மதுரை}},
-{{IPA2|mɐd̪ɯrəj}}) is a city and a [[municipal corporation]] situated on the banks of the [[Vaigai River|River Vaigai]] in [[Madurai district]] in the [[India]]n
-[[States and territories of India|state]] of [[Tamil Nadu]]. The city is also known as Madura, pronounced ''Ma ju ra'', and as ''Nan mada kudal'', the original name.  The city of Madurai, with a population of 922,913 according to the 2001 census, is the administrative capital of Madurai district.
+Ing '''Madurai''' {{audio|Madurai.ogg|pronunciation}} ({{lang-ta|மதுரை}},
+{{IPA2|mɐd̪ɯrəj}}) metung yang lakanbalen o ciudad ampong [[w:Municipal corporation|municipal corporation]] king pampang ning [[Vaigai River|Ilug Vaigai]] king [[Madurai (distritu)]], king [[Estadu ampong teritoriu ning India|estadu]] ning [[Tamil Nadu]], [[India]]. Ausan de murin ing lakanbalen kareng lagiung Madura, a yagkas dang ''Ma ju ra'', ampong ''Nan mada kudal'', ing orihinal nang lagiu. Ing lakanbalen ning Madurai ing tungkung pangkapanibalan (''administrative capital'') ning distritu ning Madurai. 
 
-Madurai was the capital city of the [[Pandya]] kings of [[South India]].  Madurai's cultural heritage goes back 2500 years, and the city has been an important commercial center since as early as [[550]] C.E.  
+Ing Madurai ing lakanbalen a tungku da reng aring [[Pandya]] ning [[w:South India|Mauling India]]. Miraras aduang libung limang dalang banua ing pamana nang pangkalinangan ning Madurai, at metung yang maulagang sentru ning kalakal kanita pang [[550]] C.E.  
 
-In legend, the original town of [[Madurai]] was destroyed by a [[tsunami]] in ancient [[Lemuria (continent)]].  The new city was home to the last [[Tamil Sangam]] in the early part of last Century. The great national poet [[Subramanya Bharathi]] worked as a [[Tamil language]] [[pandit]] / teacher in Sethupathy High School during the early [[ 20th Century ]]. There is a village town in the neighbouring district of [[Dindigul]] called Vada Madurai, and another in the neighbouring district of Sivagangai called [[Mana Madurai]]. 
+==Lon la murin deti==
+*[[w:Madurai district]]
+*[[w:Madurai Tamil|Madurai Dialect]]
+*[[w:List of colleges and institutes in Madurai district]]
 
-== Geography ==
-
-[[Image:Madurai 78.11654E 9.93331N.jpg|thumb|Satellite image of Madurai urban area]] 
-Madurai city has an area of 52 km², within an urban area now extending over as much as 130 km²<ref>{{cite web
-|url=http://www.madurai.com/general.htm |title=Madurai General Information |publisher= |accessdate=2008-06-15}}</ref>, and it is located at {{coor d|9.93|N|78.12|E|}}.<ref>{{cite web
-|url=http://www.fallingrain.com/world/IN/25/Madurai.html |title=Maps, Weather, and Airports for Madurai, India |publisher=Falling Rain Genomics, Inc
-|accessdate=2008-06-15}}</ref> It has an average elevation of 101 meters above mean sea level.<ref>{{cite web
-|url=http://203.101.40.168/mducorp/web/Maduraiheader.asp?fname=history.htm
-|title=Madurai Corporation - History |publisher=Madurai Corporation, Government of India |accessdate=2008-06-15}}</ref> The climate is dry and hot, with rains during October-December. Temperatures during summer reach a maximum of 40 and a minimum of 26.3 degrees celsius. Winter temperatures range between 29.6 and 18 degrees celsius. The average annual rainfall is about 85 cm.
-{{clr}}
-
-== Demographics ==
-As of the 2001 India [[census]]<ref name=census />, the city of Madurai had a population of 922,913 and the urban area 1,194,665. Males constitute 51% of the population and females 49%.
-Madurai has an average literacy rate of 79%, higher than the national average of 59.5%: male literacy is 84%, and female literacy is 74%. In Madurai, 10% of the population is under 6 years of age. There are 968 females per 1,000 males.<ref>{{cite web |url=http://www.tn.gov.in/dear/Women%20empower.pdf|title = Women Development}}
-</ref>
-
-== Language ==
-[[Image:Vegetable vendor in Madurai.jpg|thumb|Vegetable vendor in Madurai]]
-Tamil is spoken, predominantly, in and around Madurai. The slang of "Madurai Tamil" differs from others such as "Kongu Tamil", "Nellai Tamil", "Ramnad Tamil" and "Chennai Tamil". Along with Tamil, other languages spoken are [[Telugu]], [[Kannada]] and [[Sourashtra]]. However the words of these languages have Tamil words mixed in with them. Nowadays Hindi, Gujarati, and Marathi also are heard in Madurai. 
-
-Population
-decline:<ref>[http://www.world-gazetteer.com/wg.php?x=&men=gcis&lng=en&dat=32&geo=-104&srt=pnan&col=aohdq&pt=c&va=x&geo=-1881 World-gazetteer.com]</ref>
-{|class="wikitable"
-![[Year]]
-![[Population]]
-![[Type]]
-!Source
-|----
-|[[1991]]
-|940,989
-|census
-|official 
-|----
-|[[2001]]
-|922,913
-|census
-|official 
-|----
-|[[2007]]
-|1,300,998
-|calculation
-| 
-|}
-
-== Landmarks in the City ==
-[[Image:Maduraitemple.jpg|thumb|[[Meenakshi Amman Temple]] complex]]
-===Meenakshi-Sundareswar Temple===
-Madurai's [[Meenakshi Amman Temple|Meenakshi-Sundareswarar]] temple, which stands today as one of India's great cultural and architectural landmarks, was originally built by the early Pandya King Kulasekara. The ancient city of Madurai supposedly was laid out in a lotus-like formation, with the temple at
-the center and streets and main thoroughfares layered one after the other concentrically, outward from the center. One legend says that on the day the city was to be named, Lord Shiva blessed the land and its people while divine nectar showered on the city from his matted locks. The city hence came to be known as ''Madhurapuri'' meaning ''The City of Divine Nectar''. The legend is likely a late tale attempting to Sanskritise the otherwise-Dravidian derivative of ''Madurai''.  
-
-===Thirumalai Nayakar Mahal===
-[[Image:Thirumalai-Nayak-Palace-Madurai.jpg|thumb|right|150px|[[Thirumalai Nayak Palace|Thirumalai Naicker Mahal]] at Madurai]]
-This palace complex was constructed in the Indo-Saracen style by [[Tirumalai Nayak|Thirumalai Nayakar]] in 1636. It is a national monument and is now under the care of the Tamil Nadu Archaeological Department.
-
-The original palace complex was four times bigger than the present structure. It was divided into two parts, Swarga-vilasa and Rang-vilasa. In each of these there are royal residences, theater, shrines, apartments, armory, palanquin place, royal bandstand, quarters, pond and garden. The ceilings are decorated with large paintings showing Shaivite and Vaishnavite themes.
-
-The portico known as Swarga Vilasam is an arcaded octagon wholly constructed of bricks and mortar without the support of a single rafter or girder. The stucco work on its domes and arches is remarkable. The gigantic pillars and structures represent architectural mastery. The courtyard and the dancing hall are central attractions for visitors. There are 248 pillars, each 58 feet tall and 5 feet in diameter.
-
-Furniture and utensils used by the kings is on exhibit inside the palace. The palace is equipped to perform light and sound shows depicting the story of Silappathikaram, in both Tamil and English languages.
-
-The palace has been featured in many films, such as ''Bombay'', ''Iruvar'', ''Guru'' and ''Jodi''.
-
-===Azhagar Koyil===
-[[Image:Sun race.JPG|thumb|Kallazhagar idol]]
-[[Azhagar Koyil]], located about 25 km from the city, is a shrine. The location is surrounded by hills. The principal idol of the shrine is that of Lord Kallazhagar. The [[Tamil New Year| Tamil new year]] festival called Chittirai Thiruvizha has been celebrated for centuries in this temple. In the entrance of the Azhagar kovil one can view the [[Badhri Narayanan temple]], built similar to Badrinath near Mount Kailash in northern India:  the principal idol in this shrine represents Vishnu in a meditative posture, flanked by Nara-Narayan. 
-
-The Lord Kallalagar is said to visit the temple on the eve of the Chittirai festival, one of the famous festivals in Tamil Nadu. He starts the journey from the Alagar Koil, crossing the Badri Narayanan Shrine.[1] During this time, he visits Vandiyur, near the Vaigai River, on the eastern outskirts of Madurai. It is believed that he realizes he is too late for his sister's wedding, so refuses to cross the river, and returns disappointed to Alagar Koil.
-
-===Gandhi Museum===
-The museum displays information about [[Mahatma Gandhi]], and most importantly it showcases the original blood-stained garment of Gandhi when he was [[assassinated]] by [[Nathuram Godse]]. The other piece of the garment is kept at the Gandhi Museum in Delhi.
-
-===Kazimar Periya Pallivasal===
-This famous mosque (masjid) is located at the heart of Madurai city, within 500 metres of the [[Periyar]] bus stand and within 1 kilometre southeast of the Madurai railway junction. Hazrat Kazi Syed Tajuddin, who came from [[Oman]] during late 12th century, received this land from the king, Ku Pandiyan, and constructed the mosque which is the earliest Muslim place of worship in Madurai. All of his descendants (Huqdars - shareholders of that mosque are called Syeds) have lived in the same locality for 700 years, and have managed the mosque since then. Syed Tajuddin was appointed as Kazi of the sultans, and still his descendants who live at Kazimar street, Madurai, are appointed as Kazis to the [http://www.tn.gov.in Government of Tamil Nadu]. All Syeds belong to the Sunni sect of Islam, its Hanafi school. Most of the descendants of Kazi Syed Tajuddin are shadhilis (shazuli) and follow the Sufi order [http://www.shazuli.com Fassiyatush Shadhiliya].
-
-===Thiruparankundram===
-Thiruparakundram temple has become a symbol of the religious harmony as of the people of Madurai. The traditional legend is that Lord Murugan married [[Deivanai]] at [[Thiruparankundram Murugan Temple]], which also is the first among the Six Holy [[Abode]]s of Murugan (Arupadai Veedu, literally "Six Battle Camps").<ref>{{cite web|url= http://www.murugan.org/temples/parankundram.htm |title=Tirupparankundram | accessdate = 2007-05-26}}</ref><ref>{{cite web|url=http://www.maduraidirectory.com/tourism/thiru.php|title= The first Aru Padai Veedu|accessdate = 2007-05-25}}</ref>
-          
-A famous Islamic Durgah (shrine) also is located at the top of the hill, where the grave of an Islamic saint Hazrat Sulthan Sikandhar Badushah, who came from Jeddah during the mid 9th century, is found. Irrespective of religion, people from all parts of [[Tamil Nadu]] and from [[Kerala]] visit this durgah -- people who visit [http://www.ervadi.com Ervadi Durgah] in Ramnad district, particularly, are supposed to visit this durgah. Many poems were written in praise of Hazrat Sultan Sikandhar Badhusha, by Syed Abdussalam Ibrahim Saalim Hazrat, the third in the list of [http://www.maqbara.com Madurai Hazrats]. It is believed that people who come here with a wish see it answered in a very short time, and so he is also called Mustajab ad Du'aa Sikandhar Badhushah.<!---someone please translate & explain this title--->
-
-===St. Mary’s Cathedral===
-St. Mary’s Cathedral in Madurai is the seat of the [[Roman Catholic Archdiocese of Madurai]].
-
-== Transport ==
-[[Image:Madurai 04.jpg|thumb|Ox cart, still an important mode of transport in rural areas.]]
-Madurai is well-connected by air, rail and road. The railway station is one of the busiest in the country and has computerized reservation counters. Madurai division repeatedly has received the award for being the best-maintained station in the [[Southern Railway (India)|Southern Railway]].<ref>{{cite news|title=Elegant ambience|url=http://www.hinduonnet.com/thehindu/mp/2004/10/16/stories/2004101600330100.htm
-|publisher=The Hindu |date=October 16, 2004|accessdate=2007-03-09}}</ref> The railway station code for Madurai junction is '''MDU'''.
-
-Madurai has several major bus stands: the central bus terminus at Central Bus Stand (North) is one of the biggest and busiest bus terminals in Southeast Asia. The major bus stand for the city is at Maattuthavani, from which many buses to and from locations all over the country run round the clock. 
-
-Bridges have been constructed across the Vaigai river to connect Madurai at various points. Flyovers have been constructed within the city to overcome traffic congestion. The Golden Quadrilateral and the four lane highway to Chennai make Madurai well-connected by road.
-
-[[Madurai Airport]] is approximately 9 kilometers from the Madurai
-Railway station, and currently it offers flights to Bangalore, Chennai
-and Mumbai. [[Jet Airways]], [[Air Deccan]], [[Paramount Airways]] and
-[[Indian Airlines]] are the airlines available. International flights from Madurai to Colombo, Singapore and Gulf countries are planned to begin service this year. The nearest international airport is in [[Coimbatore]] , which is 160km from Madurai.
-{| class="wikitable"
-|-
-! Airline-From Madurai
-! Service to
-
-|-
-| Indian
-| Chennai, Mumbai
-
-|-
-| Paramount Airways
-| Chennai,Bangalore
-
-|-
-| Jet Airways
-| Chennai
-
-|-
-| Air Deccan (Kingfisher)
-| Chennai, Bangalore
-|}
-
-==Software Technology==
-[[Software Technology Parks of India]], an agency of the Government of India, has authorized several companies in Madurai to receive benefits under its national information technology development program.
-----
-
-* [[Honey Well Technologies India (P) Ltd]]
-*  [[AJ Square Consultancy Services (P) Ltd]]
-[http://www.chennai.stpi.in/stpc.html]
-
-----
-
-==Education==
-{{main |Educational Institutions in Madurai}}
-Madurai is home to the [[Madurai Kamaraj University]]. The city has a Medical College, an Agricultural College and Research Institute, a Law College, and many Engineering, Arts and Science Colleges, such as [http://www.mkuniversity.org/sub_link_pg.php?id=pc25 Sourastra College of Arts and Science, Vilachery]. Madurai has many well-reputed schools, polytechnics and [[Industrial training institutes]] (ISI's). Established in 1881 by American missionaries, [[The American College in Madurai]] is one of the most prominent and oldest educational institutions in Madurai,K.L.N College of Information Technology very good placement engineering college in Madurai.
-
-==Personalities from Madurai==
-
-* [[Bharat Ratna]] [[MS Subbulakshmi]]
-* Vidhya Shankar, Biblical archaeologist
-* [[T. M. Soundararajan]], Background Singer
-* Madurai Somu , Carnatic artist
-* Madurai Mani , Carnatic artist
-* [[Boaz Augustin]], Entrepreneur
-* [[Mani Rathnam]], Flim director, film producer, screenwriter
-* [[Vijayakanth]], Tamil actor, politician
-* [[Vadivelu]], popular Tamil Cine Supporting Actor
-* [[Ilaiyaraaja]],Indian music composer, singer, and lyricist.
-
-==Political Personalities==
-* [[P. T. R. Palanivel Rajan]]Politician.
-* M. K. Azhagiri, elder son of DMK party chief and Tamil Nadu Chief Minister M. Karunanidhi
-* Vijayakanth, leading Tamil actor and founder of the DMDK party
-*DR.N.Sethuraman,Founder,President of Menakshi Mission Hospital and Research centre
-
-==See also==
-*[[Madurai district]]
-*[[Madurai Tamil|Madurai Dialect]]
-*[[List of colleges and institutes in Madurai district]]
-
-== References ==
+== Dalerayan ==
 {{Reflist}}
 
-== External links ==
+== Suglung palual ==
 <!---PLEASE DISCUSS ADDING EXTERNAL LINKS ON THE TALK PAGE--->
 * {{dmoz|Regional/Asia/India/Tamil_Nadu/Localities/Madurai/}}
 * [http://www.oochappan.be/madu.html Impressions of Madurai]
