--- a/Eneru_31.mw
+++ b/Eneru_31.mw
@@ -2,7 +2,17 @@ Ing '''[[Eneru 31]]''' ya ing  [[31 (numeru)|pangatlungpulu'tmetung]] aldo ning 
 {{EneruCalendariu}}
 
 ==Mengapalyari==
-
+* [[1504]] - [[France]] sinut ne ing  [[Naples]] keng [[Aragon]].
+* [[1606]] - [[Gunpowder Plot]]: [[Guy Fawkes]] mebite ya uli ning kayang pamikatsa laban keng  [[Parliamentu]] ampon kang  [[James I ning England]]. 
+* [[1747]] - Ing mumunang [[venereal disease]] a clinica mibusni ya king [[London Lock Hospital]].
+* [[1814]] - I [[Gervasio Antonio de Posadas]] meging yang Supremu Director ning [[Argentina]].
+*[[1846]] - Kaibat ning [[Milwaukee Bridge War]], Juneautown ampong Kilbourntown miabe la bilang Lakanbalen ning [[Milwaukee, Wisconsin]].
+* [[1849]] - Deng [[Corn Laws]] mebaliwala la king [[United Kingdom]] (kaibat ning sulat ning batas inyang  1846).
+* [[1862]] - I [[Alvan Graham Clark]] apagumasdan na ing mumunang [[maputing pandak]] a [[batuin]], a kayabe neng [[Sirius]], kapamilatan ning labing walung pulgadang telescope king [[Northwestern University]].
+* [[1865]] - [[American Civil War]]: I [[Confederate States of America|Confederate]] General [[Robert E. Lee]] meging yang general-a-hefe.
+* [[1867]] - Ing [[Maronite]] a nationalist a pamuntuk i [[Youssef Karam]] likuan ne ing  [[Lebanon]] keng pamanyake na keng daung a [[France|French]] para [[Algeria]]
+* [[1876]] - Ing  [[United States]] inutusan no reng eganaganang [[Native Americans in the United States|Native American]] na malis la papuntang kareng reservation. 
+* [[1891]] - Ing mumunang tangka ning [[Portugal|Portuguese]] [[Republicanism|republican]] [[pamanaklas]] linust king pangulung lakanbalen ning [[Porto]].
 
 ==Ding Kebaitan==
 ==Ding Kematyan==
