*Empty MediaWiki Message*

--- a/Mathura.mw
+++ b/Mathura.mw
@@ -1,4 +1,4 @@
-Ing '''Mathura''' {{audio|Mathura.ogg|pronunciation}} ([[IAST]] ''{{IAST|mathurā}}'')([[Hindi]]: मथुरा) metung yang banal a lakanbalen o ciudad king [[Estadu ampong teritoriu ning India|estadu]] ning [[Uttar Pradesh]], [[India]].  Maki dayu yang manga 50 [[w:kilometer|km]] king pangulu (''north'') ning [[Agra]], ampong 150 km king mauli (''south'') ning [[Delhi]]; manga adua yang pulung milia manibat king banal a [[Vrindavana]].<ref>{{cite book
+Ing '''Mathura''' ({{audio|Mathura.ogg|pronunciation}} ([[IAST]] ''{{IAST|mathurā}}'')([[Hindi]]: मथुरा)) metung yang banal a lakanbalen o ciudad king [[Estadu ampong teritoriu ning India|estadu]] ning [[Uttar Pradesh]], [[India]].  Maki dayu yang manga 50 [[w:kilometer|km]] king pangulu (''north'') ning [[Agra]], ampong 150 km king mauli (''south'') ning [[Delhi]]; manga adua yang pulung milia manibat king banal a [[Vrindavana]].<ref>{{cite book
  |author=Schweig, G.M.
  |year=2005
  |title=Dance of divine love: The Rasa Lila of Krishna from the Bhagavata Purana, India's classic sacred love story.
