*Empty MediaWiki Message*

--- a/Mirzapur.mw
+++ b/Mirzapur.mw
@@ -1,4 +1,4 @@
-:''For the settlement in Bangladesh, see [[Mirzapur, Bangladesh]].''
+:''Para ketang balayan (''settlement'') king Bangladesh, lon ya ing [[Mirzapur, Bangladesh]].''
 <!-- See [[Wikipedia:WikiProject Indian cities]] for details -->{{Infobox Indian Jurisdiction |
 native_name = Mirzapur | 
 type = city | 
