*Empty MediaWiki Message*

--- a/Mirzapur.mw
+++ b/Mirzapur.mw
@@ -23,7 +23,7 @@ website = |
 footnotes = |
 }}
 
-Ing '''Mirzapur''' {{audio|Mirzapur.ogg|pronunciation}} ([[Hindi]]: मिर्ज़ापुर, [[Urdu]]: '''مرزا پور''') metung yang lakanbalen king libutad ning Pangulung (''North'') India, a manga 650 km king pilatan ning [[Delhi]] ampong [[Kolkata]], at pareu murin dayu king [[Allahabad]] ampong [[Varanasi]]. Atiu iti king estadu ning [[Uttar Pradesh]], at pikabaluan ya king kayang industria da reng alpombra (panakap lande) ampong gamit a gawa king tangsu (''brass''). 
+Ing '''Mirzapur''' {{audio|Mirzapur.ogg|pronunciation}} ([[Hindi]]: मिर्ज़ापुर, [[Urdu]]: '''مرزا پور''') metung yang lakanbalen king libutad ning Pangulung (''North'') India, a manga 650 km king pilatan ning [[Delhi]] ampong [[Kolkata]], at pareu murin dayu king [[Allahabad]] ampong [[Varanasi]]. Atiu iti king estadu ning [[Uttar Pradesh]], at pikabaluan ya king kayang industria da reng alpombra (panakap lande o ''carpet'') ampong gamit a gawa king tangsu (''brass''). 
 
 ==Dalerayan==
 <references/>
