*Empty MediaWiki Message*

--- a/Moga,_Punjab.mw
+++ b/Moga,_Punjab.mw
@@ -1,4 +1,4 @@
-!-- See [[Wikipedia:WikiProject Indian cities]] for details -->{{Infobox Indian Jurisdiction |
+{{Infobox Indian Jurisdiction |
 native_name = Moga | 
 type = city | 
 latd = 30.8 | longd = 75.17|
