--- a/Mumbai.mw
+++ b/Mumbai.mw
@@ -6,7 +6,7 @@
 |latd=18.96 |longd=72.82
 |locator_position   = right
 |skyline            = DowntownBombay.jpg |650px
-|skyline_caption    = [[Nariman Point]] and [[Cuffe Parade]]
+|skyline_caption    = Ing [[Nariman Point]] ampo ing [[Cuffe Parade]]
 |state_name         = Maharashtra
 |district           = • [[Mumbai City]]<br />• [[Mumbai Suburban]]
 |leader_title       = [[Municipal Commissioner of Mumbai|Municipal commissioner]]
