*Empty MediaWiki Message*

--- a/Shariff_Kabunsuan.mw
+++ b/Shariff_Kabunsuan.mw
@@ -29,10 +29,10 @@ Ing Shariff Kabunsuan atin yang 11 a [[Municipalities of the Philippines|balen]]
 {| class="wikitable"
 |- bgcolor=#cccccc
 ! colspan=2 | [[Municipalities of the Philippines|Balen]] 
-! No. of<br> [[Barangays]] 
-! Population<br>(2000) 
-! Area<br>(km²) 
-! Pop. density<br />(per km²)
+! Bilang da reng <br> [[Barangays]] 
+! Populasyun<br>(2000) 
+! Lualas<br>(km²) 
+! Pop. pangasiksik<br />(per km²)
 |-
 |
 |[[Barira, Shariff Kabunsuan|Barira]]
@@ -82,10 +82,10 @@ Ing Shariff Kabunsuan atin yang 11 a [[Municipalities of the Philippines|balen]]
 {| class="wikitable"
 |- bgcolor=#cccccc
 ! colspan=2 | [[Municipalities of the Philippines|Balen]] 
-! No. of<br> [[Barangays]] 
-! Population<br>(2000) 
-! Area<br>(km²) 
-! Pop. density<br />(per km²)
+! Bilang da reng<br> [[Barangays]] 
+! Populasyun<br>(2000) 
+! Lualas<br>(km²) 
+! Pop. pangasiksik<br />(per km²)
 |-
 |
 |[[Datu Blah T. Sinsuat, Shariff Kabunsuan|Datu Blah T. Sinsuat]]
