*Empty MediaWiki Message*

--- a/Shariff_Kabunsuan.mw
+++ b/Shariff_Kabunsuan.mw
@@ -29,10 +29,10 @@ Ing Shariff Kabunsuan atin yang 11 a [[Municipalities of the Philippines|balen]]
 {| class="wikitable"
 |- bgcolor=#cccccc
 ! colspan=2 | [[Municipalities of the Philippines|Balen]] 
-! Bilang da reng <br> [[Barangays]] 
+! Bilang da reng <br> [[Barangay]] 
 ! Populasyun<br>(2000) 
 ! Lualas<br>(km²) 
-! Pop. pangasiksik<br />(per km²)
+! Pop. pangasiksik<br />(balang km²)
 |-
 |
 |[[Barira, Shariff Kabunsuan|Barira]]
@@ -82,10 +82,10 @@ Ing Shariff Kabunsuan atin yang 11 a [[Municipalities of the Philippines|balen]]
 {| class="wikitable"
 |- bgcolor=#cccccc
 ! colspan=2 | [[Municipalities of the Philippines|Balen]] 
-! Bilang da reng<br> [[Barangays]] 
+! Bilang da reng<br> [[Barangay]] 
 ! Populasyun<br>(2000) 
 ! Lualas<br>(km²) 
-! Pop. pangasiksik<br />(per km²)
+! Pop. pangasiksik<br />(balang km²)
 |-
 |
 |[[Datu Blah T. Sinsuat, Shariff Kabunsuan|Datu Blah T. Sinsuat]]
