*Empty MediaWiki Message*

--- a/Template:Philippines_political_divisions.mw
+++ b/Template:Philippines_political_divisions.mw
@@ -5,12 +5,12 @@
 ! style="background-color: #bce" | Tungku
 | '''[[Menila]]'''&nbsp;| [[Metro Manila|National Capital Region]]
 |-
-! style="background-color: #bce" |  [[Ding Lalawigan ning |Lalawigan]]
+! style="background-color: #bce" |  [[Ding Lalawigan ning Filpinas|Lalawigan]]
 | style="background-color: #eee"| [[Abra |Abra]]&nbsp;| [[Agusan del Norte]]&nbsp;| [[Agusan del Sur]]&nbsp;| [[Aklan]]&nbsp;| [[Albay]]&nbsp;| [[Antique |Antique]]&nbsp;| [[Apayao]]&nbsp;| [[Aurora|Aurora]]&nbsp;| [[Basilan]]&nbsp;| [[Batanes]]&nbsp;| [[Batangas]]&nbsp;| [[Benguet]]&nbsp;| [[Biliran]]&nbsp;| [[Bohol]]&nbsp;| [[Bukidnon]]&nbsp;| [[Bulacan]]&nbsp;| [[Cagayan]]&nbsp;| [[Camarines Norte]]&nbsp;| [[Camarines Sur]]&nbsp;| [[Camiguin]]&nbsp;| [[Capiz]]&nbsp;| [[Catanduanes]]&nbsp;| [[Cavite]]&nbsp;| [[Cebu]]&nbsp;| [[Compostela Valley]]&nbsp;| [[Cotabato]]&nbsp;| [[Davao del Norte]]&nbsp;| [[Davao del Sur]]&nbsp;| [[Davao Oriental]]&nbsp;| [[Eastern Samar]]&nbsp;| [[Guimaras]]&nbsp;| [[Ifugao]]&nbsp;| [[Ilocos Norte]]&nbsp;| [[Ilocos Sur]]&nbsp;| [[Iloilo]]&nbsp;| [[Isabela |Isabela]]&nbsp;| [[Kalinga]]&nbsp;| [[La Union]]&nbsp;| [[Laguna|Laguna]]&nbsp;| [[Lanao del Norte]]&nbsp;| [[Lanao del Sur]]&nbsp;| [[Leyte]]&nbsp;| [[Maguindanao]]&nbsp;| [[Marinduque]]&nbsp;| [[Masbate]]&nbsp;| [[Misamis Occidental]]&nbsp;| [[Misamis Oriental]]&nbsp;| [[Mountain Province]]&nbsp;| [[Negros Occidental]]&nbsp;| [[Negros Oriental]]&nbsp;| [[Northern Samar]]&nbsp;| [[Nueva Ecija]]&nbsp;| [[Occidental Mindoro]]&nbsp;| [[Oriental Mindoro]]&nbsp;| [[Palawan]]&nbsp;| [[Pampanga]]&nbsp;| [[Pangasinan]]&nbsp;| [[Quezon]]&nbsp;| [[Quirino]]&nbsp;| [[Rizal]]&nbsp;| [[Romblon]]&nbsp;| [[Samar]]&nbsp;| [[Sarangani]]&nbsp;| [[Siquijor]]&nbsp;| [[Sorsogon]]&nbsp;| [[South Cotabato]]&nbsp;| [[Southern Leyte]]&nbsp;| [[Sultan Kudarat]]&nbsp;| [[Sulu]]&nbsp;| [[Surigao del Norte]]&nbsp;| [[Surigao del Sur]]&nbsp;| [[Tarlac]]&nbsp;| [[Tawi-Tawi]]&nbsp;| [[Zambales]]&nbsp;| [[Zamboanga del Norte]]&nbsp;| [[Zamboanga del Sur]]&nbsp;| [[Zamboanga Sibugay]]
 |-
-! style="background-color: #bce" | Autonomous<br>region
-| [[Autonomous Region in Muslim Mindanao]] | [[Regions of the Philippines|Other regions]]
+! style="background-color: #bce" | Autonomous<br>labuad
+| [[Autonomous Region in Muslim Mindanao]] | [[Ding labuad ning Filipinas|Aliwang Labaud]]
 |-
-! style="background-color: #bce" | Territorial<br>disputes
-| style="background-color: #eee"| [[Sabah]]&nbsp;| [[Scarborough Shoal]] | [[Spratly Islands]]
+! style="background-color: #bce" | Territoryung<br>pisasabian
+| style="background-color: #eee"| [[Sabah]]&nbsp;| [[Scarborough Shoal]] | [[Spratly Pulu]]
 |}
