*Empty MediaWiki Message*

--- a/Ding_lalawígan_ning_Filipínas.mw
+++ b/Ding_lalawígan_ning_Filipínas.mw
@@ -18,7 +18,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_aklan.png|30px]] || [[Aklan]] || [[Kalibo, Aklan|Kalibo]] || [[Albugan Visayas|Labuad VI]] || 451,314 || 1,817.9 || 248.3
 |-
-|| [[Image:Ph_seal_albay.png|30px]] || [[Albay]] || [[Lakanbalen Legazpi]] || [[Labuad Bicol|Labuad V]] || 1,090,907 || 2,552.6 || 427.4 
+|| [[Image:Ph_seal_albay.png|30px]] || [[Albay]] || [[Legazpi Lakanbalen]] || [[Labuad Bicol|Labuad V]] || 1,090,907 || 2,552.6 || 427.4 
 |-
 || [[Image:Ph_seal_antique.png|30px]] || [[Antique|Antique]] || [[San Jose, Antique|San Jose]] || [[Albugan Visayas|Labuad VI]] || 471,088 || 2,522.0 || 186.8 
 |-
@@ -26,19 +26,19 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_aurora.png|30px]] || [[Aurora|Aurora]] || [[Baler, Aurora|Baler]] || [[Kalibudtarang Luzon|Labuad III]] || 173,797 || 3,239.5 || 53.6 
 |-
-|| [[Image:Ph_seal_basilan.png|30px]] || [[Basilan]] || [[Lakanbalen Isabela]] || [[Autonomous Region in Muslim Mindanao|ARMM]] || 259,796 || 1,234.2 || 210.5 
+|| [[Image:Ph_seal_basilan.png|30px]] || [[Basilan]] || [[Isabela Lakanbalen]] || [[Autonomous Region in Muslim Mindanao|ARMM]] || 259,796 || 1,234.2 || 210.5 
 |-
-|| [[Image:Ph_seal_bataan.png|30px]] || [[Bataan]] || [[Lakanbalen Balanga]] || [[Kalibudtarang Luzon|Labuad III]] || 557,659 || 1,373.0 || 406.2 
+|| [[Image:Ph_seal_bataan.png|30px]] || [[Bataan]] || [[Balanga Lakanbalen]] || [[Kalibudtarang Luzon|Labuad III]] || 557,659 || 1,373.0 || 406.2 
 |-
 || [[Image:Ph_seal_batanes.png|30px]] || [[Batanes]] || [[Basco, Batanes|Basco]] || [[Saug Cagayan|Labuad II]] || 16,467 || 209.3 || 78.7 
 |-
-|| [[Image:Ph_seal_batangas.png|30px]] || [[Batangas]] || [[Lakanbalen Batangas]] || [[CALABARZON|Labuad IV-A]] || 1,905,348 || 3,165.8 || 601.9 
+|| [[Image:Ph_seal_batangas.png|30px]] || [[Batangas]] || [[Batangas Lakanbalen]] || [[CALABARZON|Labuad IV-A]] || 1,905,348 || 3,165.8 || 601.9 
 |-
 || [[Image:Ph_seal_benguet.png|30px]] || [[Benguet]] || [[La Trinidad, Benguet|La Trinidad]] || [[Cordillera Administrative Region|CAR]] || 582,515 || 2,655.4 || 219.4 
 |-
-|| [[Image:Ph_seal_biliran.png|30px]] || [[Biliran]] || [[Naval, Biliran|Naval]] || [[Aslagan Visayas|Region VIII]] || 140,274 || 555.5 || 252.5 
+|| [[Image:Ph_seal_biliran.png|30px]] || [[Biliran]] || [[Naval, Biliran|Naval]] || [[Aslagan Visayas|Labuad VIII]] || 140,274 || 555.5 || 252.5 
 |-
-|| [[Image:Ph_seal_bohol.png|30px]] || [[Bohol]] || [[Lakanbalen Tagbilaran]] || [[Kalibudatarang Visayas|Labuad VII]] || 1,137,268 || 4,117.3 || 276.2 
+|| [[Image:Ph_seal_bohol.png|30px]] || [[Bohol]] || [[Tagbilaran Lakanbalen]] || [[Kalibudatarang Visayas|Labuad VII]] || 1,137,268 || 4,117.3 || 276.2 
 |-
 || [[Image:Ph_seal_bukidnon.png|30px]] || [[Bukidnon]] || [[Lakanbalen Malaybalay]] || [[Northern Mindanao|Labuad X]] || 1,060,265 || 8,293.8 || 127.8 
 |-
@@ -52,7 +52,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_camiguin.png|30px]] || [[Camiguin]] || [[Mambajao, Camiguin|Mambajao]] || [[Northern Mindanao|Labuad X]] || 74,232 || 229.8 || 323.0 
 |-
-|| [[Image:Ph_seal_capiz.png|30px]] || [[Capiz]] || [[Lakanbalen Roxas]] || [[Albugan Visayas|Labuad VI]] || 654,156 || 2,633.2 || 248.4 
+|| [[Image:Ph_seal_capiz.png|30px]] || [[Capiz]] || [[Roxas Lakanbalen]] || [[Albugan Visayas|Labuad VI]] || 654,156 || 2,633.2 || 248.4 
 |-
 || [[Image:Ph_seal_catanduanes.png|30px]] || [[Catanduanes]] || [[Virac, Catanduanes|Virac]] || [[Labuad Bicol|Labuad V]] || 215,356 || 1,511.5 || 142.5 
 |-
@@ -62,11 +62,11 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_compostela_valley.png|30px]] || [[Saug Compostela]] || [[Nabunturan, Compostela Valley|Nabunturan]] || [[Davao Region|Labuad XI]] || 580,244 || 4,667.0 || 124.3 
 |-
-|| [[Image:Ph_seal_cotabato.png|30px]] || [[Cotabato]] || [[Lakanbalen Kidapawan]] || [[SOCCSKSARGEN|Labuad XII]] || 958,643 || 6,569.9 || 145.9 
+|| [[Image:Ph_seal_cotabato.png|30px]] || [[Cotabato]] || [[Kidapawan Lakanbalen]] || [[SOCCSKSARGEN|Labuad XII]] || 958,643 || 6,569.9 || 145.9 
 |-
-|| [[Image:Ph_seal_davao_del_norte.png|30px]] || [[Davao del Norte]] || [[Lakanbalen Tagum]] || [[Davao Region|Labuad XI]] || 743,811 || 3,463.0 || 214.8 
+|| [[Image:Ph_seal_davao_del_norte.png|30px]] || [[Davao del Norte]] || [[Tagum Lakanbalen]] || [[Davao Region|Labuad XI]] || 743,811 || 3,463.0 || 214.8 
 |-
-|| [[Image:Ph_seal_davao_del_sur.png|30px]] || [[Davao del Sur]] || [[Lakanbalen Digos]] || [[Labuad Davao|Labuad XI]] || 1,905,917 || 6,377.6 || 298.8 
+|| [[Image:Ph_seal_davao_del_sur.png|30px]] || [[Davao del Sur]] || [[Digos Lakanbalen]] || [[Labuad Davao|Labuad XI]] || 1,905,917 || 6,377.6 || 298.8 
 |-
 || [[Image:Ph_seal_davao_oriental.png|30px]] || [[Davao Oriental]] || [[Mati, Davao Oriental|Mati]] || [[Labuad Davao |Labuad XI]] || 446,191 || 5,164.5 || 86.4 
 |-
@@ -76,7 +76,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_ifugao.png|30px]] || [[Ifugao]] || [[Lagawe, Ifugao|Lagawe]] || [[Cordillera Administrative Region|CAR]] || 161,623 || 2,517.8 || 64.2 
 |-
-|| [[Image:Ph_seal_ilocos_norte.png|30px]] || [[Ilocos Norte]] || [[Lakanbalen Laoag]] || [[Labuad Ilocos|Labuad I]] || 514,241 || 3,399.3 || 151.3 
+|| [[Image:Ph_seal_ilocos_norte.png|30px]] || [[Ilocos Norte]] || [[Laoag Lakanbalen]] || [[Labuad Ilocos|Labuad I]] || 514,241 || 3,399.3 || 151.3 
 |-
 || [[Image:Ph_seal_ilocos_sur.png|30px]] || [[Ilocos Sur]] || [[Lakanbalen Vigan]] || [[Labuad Ilocos|Labuad I]] || 594,206 || 2,579.6 || 230.3 
 |-
@@ -92,7 +92,7 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_lanao_del_norte.png|30px]] || [[Lanao del Norte]] || [[Tubod, Lanao del Norte|Tubod]] || [[Northern Mindanao|Labuad X]] || 758,123 || 3,092.0 || 245.2 
 |-
-|| [[Image:Ph_seal_lanao_del_sur.png|30px]] || [[Lanao del Sur]] || [[Lakanbalen Marawi]] || [[Autonomous Region in Muslim Mindanao|ARMM]] || 800,162 || 3,872.9 || 206.6 
+|| [[Image:Ph_seal_lanao_del_sur.png|30px]] || [[Lanao del Sur]] || [[Marawi Lakanbalen]] || [[Autonomous Region in Muslim Mindanao|ARMM]] || 800,162 || 3,872.9 || 206.6 
 |-
 || [[Image:Ph_seal_leyte.png|30px]] || [[Leyte]] || [[Tacloban City]] || [[Eastern Visayas|Labuad VIII]] || 1,592,336 || 5,712.8 || 278.7 
 |-
@@ -102,37 +102,37 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_masbate.png|30px]] || [[Masbate]] || [[Lakanbalen Masbate]] || [[Labuad Bicol|Labuad V]] || 707,668 || 4,047.7 || 174.8 
 |-
-|| [[Image:Ph_seal_misamis_occidental.png|30px]] || [[Misamis Occidental]] || [[Oroquieta City]] || [[Northern Mindanao|Labuad X]] || 486,723 || 1,939.3 || 251.0 
+|| [[Image:Ph_seal_misamis_occidental.png|30px]] || [[Misamis Occidental]] || [[Oroquieta Lakanbalen]] || [[Northern Mindanao|Labuad X]] || 486,723 || 1,939.3 || 251.0 
 |-
-|| [[Image:Ph_seal_misamis_oriental.png|30px]] || [[Misamis Oriental]] || [[Lakanbalen Cagayan de Oro]] || [[Northern Mindanao|Labuad X]] || 1,126,215 || 3,570.0 || 315.5 
+|| [[Image:Ph_seal_misamis_oriental.png|30px]] || [[Misamis Oriental]] || [[Cagayan de Oro Lakanbalen]] || [[Northern Mindanao|Labuad X]] || 1,126,215 || 3,570.0 || 315.5 
 |-
 || [[Image:Ph_seal_mountain_province.png|30px]] || [[Mountain Province]] || [[Bontoc, Mountain Province|Bontoc]] || [[Cordillera Administrative Region|CAR]] || 140,439 || 2,097.3 || 67.0 
 |-
-|| [[Image:Ph_seal_negros_occidental.png|30px]] || [[Negros Occidental]] {{fn|2}} || [[Lakanbalen Bacolod]] || [[Western Visayas|Labuad VI]] || 2,565,723 || 7,926.1 || 323.7 
+|| [[Image:Ph_seal_negros_occidental.png|30px]] || [[Negros Occidental]] {{fn|2}} || [[Bacolod Lakanbalen]] || [[Western Visayas|Labuad VI]] || 2,565,723 || 7,926.1 || 323.7 
 |-
-|| [[Image:Ph_seal_negros_oriental.png|30px]] || [[Negros Oriental]] || [[Lakanbalen Dumaguete]] || [[Central Visayas|Labuad VII]] || 1,126,061 || 5,402.3 || 208.4 
+|| [[Image:Ph_seal_negros_oriental.png|30px]] || [[Negros Oriental]] || [[Dumaguete Lakanbalen]] || [[Central Visayas|Labuad VII]] || 1,126,061 || 5,402.3 || 208.4 
 |-
 || [[Image:Ph_seal_northern_samar.png|30px]] || [[Northern Samar]] || [[Catarman, Northern Samar|Catarman]] || [[Eastern Visayas|Labuad VIII]] || 500,639 || 3,498.0 || 143.1 
 |-
-|| [[Image:Ph_seal_nueva_ecija.png|30px]] || [[Nueva Ecija]] || [[Lakanbalen Palayan]] || [[Kalibudtarang  Luzon|Labuad III]] || 1,659,883 || 5,284.3 || 314.1 
+|| [[Image:Ph_seal_nueva_ecija.png|30px]] || [[Nueva Ecija]] || [[Palayan Lakanbalen]] || [[Kalibudtarang  Luzon|Labuad III]] || 1,659,883 || 5,284.3 || 314.1 
 |-
 || [[Image:Ph_seal_nueva_vizcaya.png|30px]] || [[Nueva Vizcaya]] || [[Bayombong, Nueva Vizcaya|Bayombong]] || [[Saug Cagayan|Labuad II]] || 366,962 || 3,903.9 || 94.0 
 |-
 || [[Image:Ph_seal_occidental_mindoro.png|30px]] || [[Occidental Mindoro]] || [[Mamburao, Occidental Mindoro|Mamburao]] || [[MIMAROPA|Labuad IV-B]] || 380,250 || 5,879.9 || 64.7 
 |-
-|| [[Image:Ph_seal_oriental_mindoro.png|30px]] || [[Oriental Mindoro]] || [[Lakanbalen Calapan]] || [[MIMAROPA|Labuad IV-B]] || 681,818 || 4,364.7 || 156.2 
+|| [[Image:Ph_seal_oriental_mindoro.png|30px]] || [[Oriental Mindoro]] || [[Calapan Lakanbalen]] || [[MIMAROPA|Labuad IV-B]] || 681,818 || 4,364.7 || 156.2 
 |-
-|| [[Image:Ph_seal_palawan.png|30px]] || [[Palawan]] || [[Lakanbalen Puerto Princesa]] || [[Western Visayas|Labuad VI]] || 755,412 || 14,896.3 || 50.7 
+|| [[Image:Ph_seal_palawan.png|30px]] || [[Palawan]] || [[Puerto Princesa Lakanbalen]] || [[Western Visayas|Labuad VI]] || 755,412 || 14,896.3 || 50.7 
 |-
 || [[Image:Ph_seal_pampanga.png|30px]] || [[Pampanga]] || [[Lakanbalen San Fernando, Pampanga|San Fernando City]] || [[Kalibudtarang Luzon|Labuad III]] || 1,882,730 || 2,180.7 || 863.4 
 |-
 || [[Image:Ph_seal_pangasinan.png|30px]] || [[Pangasinan]] || [[Lingayen, Pangasinan|Lingayen]] || [[Labuad Ilocos |Labuad I]] || 2,434,086 || 5,368.2 || 453.4 
 |-
-|| [[Image:Ph_seal_quezon.png|30px]] || [[Quezon]] || [[Lakanbalen Lucena]] || [[CALABARZON|Labuad IV-A]] || 1,679,030 || 8,706.6 || 192.8 
+|| [[Image:Ph_seal_quezon.png|30px]] || [[Quezon]] || [[Lucena Lakanbalen]] || [[CALABARZON|Labuad IV-A]] || 1,679,030 || 8,706.6 || 192.8 
 |-
 || [[Image:Ph_seal_quirino.png|30px]] || [[Quirino]] || [[Cabarroguis, Quirino|Cabarroguis]] || [[Cagayan Valley|Labuad II]] || 148,575 || 3,057.2 || 48.6 
 |-
-|| [[Image:Ph_seal_rizal.png|30px]] || [[Rizal]] || [[Lakanbalen Antipolo]] || [[CALABARZON|Labuad IV-A]] || 1,707,218 || 1,308.9 || 1,304.3 
+|| [[Image:Ph_seal_rizal.png|30px]] || [[Rizal]] || [[Antipolo Lakanbalen]] || [[CALABARZON|Labuad IV-A]] || 1,707,218 || 1,308.9 || 1,304.3 
 |-
 || [[Image:Ph_seal_romblon.png|30px]] || [[Romblon]] || [[Romblon, Romblon|Romblon]] || [[MIMAROPA|Labuad IV-B]] || 264,357 || 1,355.9 || 195.0 
 |-
@@ -142,29 +142,29 @@ Ing '''gubernador''' ing peka pamuntuk ning gubyernung panglalawigan.  Para keng
 |-
 || [[Image:Ph_seal_siquijor.png|30px]] || [[Siquijor]] || [[Siquijor, Siquijor|Siquijor]] || [[Central Visayas|Labuad VII]] || 81,598 || 343.5 || 237.5 
 |-
-|| [[Image:Ph_seal_sorsogon.png|30px]] || [[Sorsogon]] || [[Lakanbalen Sorsogon]] || [[Labuad Bicol|Labuad V]] || 650,535 || 2,141.4 || 303.8 
+|| [[Image:Ph_seal_sorsogon.png|30px]] || [[Sorsogon]] || [[Sorsogon Lakanbalen]] || [[Labuad Bicol|Labuad V]] || 650,535 || 2,141.4 || 303.8 
 |-
-|| [[Image:Ph_seal_south_cotabato.png|30px]] || [[South Cotabato]] || [[Koronadal City]] || [[SOCCSKSARGEN|Labuad XII]] || 1,102,550 || 4,489.0 || 245.6 
+|| [[Image:Ph_seal_south_cotabato.png|30px]] || [[South Cotabato]] || [[Koronadal Lakanbalen]] || [[SOCCSKSARGEN|Labuad XII]] || 1,102,550 || 4,489.0 || 245.6 
 |-
-|| [[Image:Ph_seal_southern_leyte.png|30px]] || [[Southern Leyte]] || [[Lakanbalen Maasin]] || [[Eastern Visayas|Labuad VIII]] || 360,160 || 1,734.8 || 207.6 
+|| [[Image:Ph_seal_southern_leyte.png|30px]] || [[Southern Leyte]] || [[Maasin Lakanbalen]] || [[Eastern Visayas|Labuad VIII]] || 360,160 || 1,734.8 || 207.6 
 |-
 || [[Image:Ph_seal_sultan_kudarat.png|30px]] || [[Sultan Kudarat]] || [[Isulan, Sultan Kudarat|Isulan]] || [[SOCCSKSARGEN|Labuad XII]] || 586,505 || 4,714.8 || 124.4 
 |-
 || [[Image:Ph_seal_sulu.png|30px]] || [[Sulu]] || [[Jolo, Sulu|Jolo]] || [[Autonomous Region in Muslim Mindanao|ARMM]] || 619,668 || 1,600.4 || 387.2 
 |-
-|| [[Image:Ph_seal_surigao_del_norte.png|30px]] || [[Surigao del Norte]] || [[Lakanbalen Surigao]] || [[Caraga|Labuad XIII]] || 481,416 || 2,739.0 || 175.8 
+|| [[Image:Ph_seal_surigao_del_norte.png|30px]] || [[Surigao del Norte]] || [[Surigao Lakanbalen]] || [[Caraga|Labuad XIII]] || 481,416 || 2,739.0 || 175.8 
 |-
 || [[Image:Ph_seal_surigao_del_sur.png|30px]] || [[Surigao del Sur]] || [[Tandag, Surigao del Sur|Tandag]] || [[Caraga|Labuad XIII]] || 501,808 || 4,552.2 || 110.2 
 |-
-|| [[Image:Ph_seal_tarlac.png|30px]] || [[Tarlac]] || [[Lakanbalen Tarlac]] || [[Klaibudtarang Luzon|Labuad III]] || 1,068,783 || 3,053.4 || 350.0 
+|| [[Image:Ph_seal_tarlac.png|30px]] || [[Tarlac]] || [[Lakanbalen Tarlac]] || [[Kalibudtarang Luzon|Labuad III]] || 1,068,783 || 3,053.4 || 350.0 
 |-
 || [[Image:Ph_seal_tawi-tawi.png|30px]] || [[Tawi-Tawi]] || [[Panglima Sugala, Tawi-Tawi|Panglima Sugala]] || [[Autonomous Region in Muslim Mindanao|ARMM]] || 322,317 || 1,087.4 || 296.4 
 |-
-|| [[Image:Ph_seal_zambales.png|30px]] || [[Zambales]] || [[Iba, Zambales|Iba]] || [[Kalibudatarang Central|Labuad III]] || 627,802 || 3,714.4 || 169.0 
+|| [[Image:Ph_seal_zambales.png|30px]] || [[Zambales]] || [[Iba, Zambales|Iba]] || [[Kalibudatarang Luzon|Labuad III]] || 627,802 || 3,714.4 || 169.0 
 |-
-|| [[Image:Ph_seal_zamboanga_del_norte.png|30px]] || [[Zamboanga del Norte]] || [[Lakanbalen Dipolog]] || [[Zamboanga Peninsula|Labuad IX]] || 823,130 || 6,618.0 || 124.4 
+|| [[Image:Ph_seal_zamboanga_del_norte.png|30px]] || [[Zamboanga del Norte]] || [[Dipolog Lakanbalen]] || [[Zamboanga Peninsula|Labuad IX]] || 823,130 || 6,618.0 || 124.4 
 |-
-|| [[Image:Ph_seal_zamboanga_del_sur.png|30px]] || [[Zamboanga del Sur]] || [[Pagadian City]] || [[Zamboanga Peninsula|Labuad IX]] || 1,437,941 || 4,964.1 || 289.7 
+|| [[Image:Ph_seal_zamboanga_del_sur.png|30px]] || [[Zamboanga del Sur]] || [[Pagadian Lakanbalen]] || [[Zamboanga Peninsula|Labuad IX]] || 1,437,941 || 4,964.1 || 289.7 
 |-
 || [[Image:Ph_seal_zamboanga_sibugay.png|30px]] || [[Zamboanga Sibugay]] || [[Ipil, Zamboanga Sibugay|Ipil]] || [[Zamboanga Peninsula|Labuad IX]] || 497,239 || 3,087.9 || 161.0
 |}
